--- a/ansible/apache.yml
+++ b/ansible/apache.yml
@@ -10,3 +10,8 @@
       service:
         name: nginx
         state: started
+    - name: Deploy
+      copy:
+        src: index.html
+        dest: /var/www/html/
+...
